# recursive_dataclasses

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: example_usage.py
recursive_dataclasses/: __init__.py
tests/: test_recursive_dataclasses.py
