[project]
name = "recursive-dataclasses"
version = "0.1.0"
description = "A Python library for recursively loading and updating dataclasses from nested dictionaries"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = 
    py311
    py312
    type
    lint

[testenv]
description = run unit tests
deps = 
    pytest>=7.0.0
commands =
    pytest {posargs:tests}

[testenv:type]
description = run type checks
deps = 
    mypy>=1.0.0
commands =
    mypy recursive_dataclasses

[testenv:lint]
description = run linters
skip_install = true
deps =
    black>=22.0.0
    ruff>=0.1.0
commands =
    black {posargs:recursive_dataclasses tests}
    ruff check {posargs:recursive_dataclasses tests}
"""
