[project]
name = "recursive-dataclasses"
version = "0.1.0"
description = "A Python library for recursively loading and updating dataclasses from nested dictionaries"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Charlie Kim", email = "kimcharli@gmail.com" }
]
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = 
    py311
    py312
    type
    lint

[testenv]
description = run unit tests
deps = 
    pytest>=7.0.0
commands =
    pytest {posargs:tests}

[testenv:type]
description = run type checks
deps = 
    mypy>=1.0.0
commands =
    mypy recursive_dataclasses

[testenv:lint]
description = run linters
deps =
    ruff>=0.1.0
commands =
    ruff check recursive_dataclasses tests
    ruff format recursive_dataclasses tests
"""
